@@ -5,17 +5,13 @@ import io.terrible.app.domain.MediaFile;
 import io.terrible.app.services.MediaFileService;
 import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import reactor.core.publisher.Mono;
 
 @Slf4j
@@ -30,7 +26,7 @@ public class StaticResourceController {
   @GetMapping(value = "/image", produces = MediaType.IMAGE_JPEG_VALUE)
   public Mono<Resource> image(@RequestParam final String path) {
 
-    return Files.isReadable(Path.of(path))
+    return Files.isReadable(Paths.get(path))
         ? Mono.just(new FileSystemResource(new File(path)))
         : Mono.empty();
   }
